--- a/02_resume-data-sci.Rmd
+++ b/02_resume-data-sci.Rmd
@@ -51,15 +51,15 @@ CV %>% print_contact_info()
 
 ## Skills {#skills}
 
-- Experienced (several years in industry) with R, SQL, Git/GitHub; working knowledge of R Shiny, Python, Stan.
+- Experienced (several years in industry) with R, SQL, Git/GitHub; working knowledge of R Shiny, Python, Stan, JavaScript
 - Standard statistical/machine learning models (regressions, mixed models, tree-based methods, clustering) and techniques (cross-validation, model evaluation, boosting).
 - Ability to communicate complex/technical concepts to folks with various backgrounds.
-- I'm self-aware, easy to get along with, and I care deeply about people.
+- I'm self-aware, easy to get along with, and I treat people well.
 
 
 ## Project Links {#projects}
 
-- [Various R Shiny apps](https://ddstats.blog/shiny)
+- [Various R Shiny apps](https://ddstats.app)
 - Markov simulator [poster](https://ddstats.blog/content/dulaney-snook-osborne.pdf) and [R Shiny app]()
 - [Bayesian modelling](https://github.com/ddstats1/grad-school)
 - [Doran's Lab research](https://www.doranslab.gg/articles/location-based-champ-metrics.html)
@@ -72,7 +72,7 @@ CV %>% print_contact_info()
 
 ## Disclaimer {#disclaimer}
 
-Made with the R package [**pagedown**](https://github.com/rstudio/pagedown).
+Made with the R package [pagedown](https://github.com/rstudio/pagedown).
 
 The source code is available [on https://github.com/ddstats1/resume](https://github.com/ddstats1/resume).
 
